--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sass": "^1.50.1",
     "ws": "^8.5.0"
   },
   "devDependencies": {
